'新增图表接口'
