# app/Http/Controllers/Api/V1/UserController.php
@@ -24,7 +24,7 @@ class UserController extends Controller
      * 增加/更新员工
      * 增加/更新员工，有employeeid为更新，没有为新增
      * @SWG\Post(
-     * path="/lsx/public/index.php/rest/v1/user/add",
+     * path="/lsx/public/index.php/v1/user/add",
      * tags={"用户模块"},
      * summary="增加/更新员工",
      * description="增加/更新员工，有employeeid为更新，没有为新增",
@@ -136,7 +136,7 @@ class UserController extends Controller
      * 删除用户接口
      * 通过用户id删除用户
      * @SWG\Post(
-     * path="/lsx/public/index.php/rest/v1/user/del",
+     * path="/lsx/public/index.php/v1/user/del",
      * tags={"用户模块"},
      * summary="删除用户接口",
      * description="通过用户id删除用户接口",
@@ -172,10 +172,53 @@ class UserController extends Controller
     }
 
     /**
+     * @SWG\Post(
+     * path="/resetPassword",
+     * tags={"用户模块"},
+     * summary="修改密码",
+     * description="修改密码",
+     * produces={"application/json"},
+     * @SWG\Parameter(
+     * in="formData",
+     * name="newpassword",
+     * type="string",
+     * description="新密码",
+     * required=true,
+     * ),
+     *  @SWG\Parameter(
+     * in="query",
+     * name="token",
+     * type="string",
+     * description="用户token",
+     * required=true,
+     * ),
+     * @SWG\Response(
+     * response="200",
+     * description="请求成功"
+     * )
+     * )
+     */
+    public function changePwd(Request $request)
+    {
+        $this->jwtAuth();
+        $validator = Validator::make($request->all(), [
+            'newpassword' => 'required'
+        ]);
+        if ($validator->fails()) {
+            return response()->json(['code' => 40401, 'msg' => "参数错误"]);
+        }
+
+        User::where('id', $this->_user['id'])
+            ->update(['password' => md5($request->input('newpassword'))]);
+
+        return $this->response->array(['code'=>200]);
+    }
+
+    /**
      * 登陆接口
      * 登陆接口，返回token
      * @SWG\Post(
-     * path="/lsx/public/index.php/rest/v1/user/login",
+     * path="/user/login",
      * tags={"用户模块"},
      * summary="登陆接口",
      * description="发送雇员id和密码，返回token",
@@ -228,13 +271,13 @@ class UserController extends Controller
      * 获取个人信息
      * 获取个人信息接口，如果token失效则会返回HTTPCODE500
      * @SWG\Get(
-     * path="/lsx/public/index.php/rest/v1/user",
+     * path="/user?token={token}",
      * tags={"用户模块"},
      * summary="获取个人信息接口",
      * description="获取个人信息接口，如果token失效则会返回HTTP CODE 500",
      * produces={"application/json"},
      * @SWG\Parameter(
-     * in="formData",
+     * in="query",
      * name="token",
      * type="string",
      * description="token",
@@ -276,4 +319,76 @@ class UserController extends Controller
         return $this->response->array(['code'=>200, 'content'=>$content]);
     }
 
+    /**
+     * 获取员工列表
+     * 获取员工列表
+     * @SWG\Get(
+     * path="/user/list",
+     * tags={"用户模块"},
+     * summary="获取员工列表",
+     * description="获取员工列表",
+     * produces={"application/json"},
+     * @SWG\Response(
+     * response="200",
+     * description="请求成功"
+     * )
+     * )
+     * dingo 注释
+     * @Post("/status")
+     * @Versions({"v1"})
+     * @Transaction({
+     * @Request({"employeeId": "101"}),
+     * @Response(200, body={"code": 200}),
+     * })
+     */
+    public function getList()
+    {
+        $users = User::select('id as employeeId', 'name', 'age', 'mobile', 'salary')->get()->toArray();
+        return $this->response->array(['code'=>200, 'totale'=>count($users), 'items'=>$users]);
+    }
+
+    /**
+     * 上传用户头像
+     * 上传用户头像
+     * @SWG\Get(
+     * path="/img/upload",
+     * tags={"用户模块"},
+     * summary="上传用户头像跟在url后面的描述",
+     * description="上传用户头像",
+     * produces={"application/json"},
+     * @SWG\Parameter(
+     * in="formData",
+     * name="img",
+     * type="file",
+     * description="上传的文件",
+     * required=true,
+     * ),
+     * @SWG\Response(
+     * response="200",
+     * description="请求成功"
+     * )
+     * )
+     * dingo 注释
+     * @Post("/")
+     * @Versions({"v1"})
+     * @Transaction({
+     * @Request({"name": "value"}),
+     * @Response(200, body={"status_code": 200}),
+     * })
+     */
+    public function imgUpload(Request $request)
+    {
+        $this->jwtAuth();
+        $file = $request->file('img');
+        if ($file->getMimeType() != 'image/jpeg') {
+            $this->response->errorForbidden('错误的文件类型');
+        }
+        if ($file->getSize() > 2000000) {
+            $this->response->errorForbidden('文件尺寸过大,2M以内');
+        }
+        $path = $file->store('public/upload');
+        $path = str_replace('public', 'storage', $path);
+        echo asset($path). "\r\n";
+        return $this->response->array(['code'=>200, 'url'=>asset($path)]);
+    }
 }
