# storage/api-docs/api-docs.json
@@ -4,8 +4,26 @@
         "title": "\u8ba2\u5355\u7cfb\u7edf",
         "version": "v0.0.1"
     },
+    "basePath": "/lsx/public/index.php/v1",
     "paths": {
-        "/lsx/public/index.php/rest/v1/food/add": {
+        "/lsx/public/index.php/v1/desk": {
+            "get": {
+                "tags": [
+                    "\u5ea7\u4f4d\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u5168\u90e8\u7a7a\u5ea7\u7684id",
+                "description": "\u83b7\u53d6\u5168\u90e8\u7a7a\u5ea7\u7684id",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/lsx/public/index.php/v1/food/add": {
             "post": {
                 "tags": [
                     "\u83dc\u54c1\u6a21\u5757"
@@ -72,7 +90,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/food/del": {
+        "/lsx/public/index.php/v1/food/del": {
             "post": {
                 "tags": [
                     "\u83dc\u54c1\u6a21\u5757"
@@ -98,7 +116,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/food/status": {
+        "/lsx/public/index.php/v1/food/status": {
             "post": {
                 "tags": [
                     "\u83dc\u54c1\u6a21\u5757"
@@ -131,7 +149,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/food/search": {
+        "/lsx/public/index.php/v1/food/search": {
             "get": {
                 "tags": [
                     "\u83dc\u54c1\u6a21\u5757"
@@ -144,27 +162,27 @@
                 "parameters": [
                     {
                         "name": "page",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u83b7\u53d6\u7b2c\u51e0\u9875\u6570\u636e",
                         "required": true,
                         "type": "number"
                     },
                     {
                         "name": "limit",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u6bcf\u9875\u591a\u5c11\u6761\u6570\u636e",
                         "required": true,
                         "type": "number"
                     },
                     {
                         "name": "title",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u83dc\u54c1\u540d\u79f0",
                         "type": "string"
                     },
                     {
                         "name": "type",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u83dc\u54c1\u7c7b\u578b",
                         "type": "string"
                     }
@@ -176,7 +194,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/food/list": {
+        "/lsx/public/index.php/v1/food/list": {
             "get": {
                 "tags": [
                     "\u83dc\u54c1\u6a21\u5757"
@@ -189,14 +207,14 @@
                 "parameters": [
                     {
                         "name": "page",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u83b7\u53d6\u7b2c\u51e0\u9875\u6570\u636e",
                         "required": true,
                         "type": "number"
                     },
                     {
                         "name": "limit",
-                        "in": "formData",
+                        "in": "query",
                         "description": "\u6bcf\u9875\u591a\u5c11\u6761\u6570\u636e",
                         "required": true,
                         "type": "number"
@@ -209,7 +227,161 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/user/add": {
+        "/lsx/public/index.php/v1/order/add": {
+            "post": {
+                "tags": [
+                    "\u8ba2\u5355\u6a21\u5757"
+                ],
+                "summary": "\u4e0b\u5355\u63a5\u53e3",
+                "description": "\u4e0b\u5355\u63a5\u53e3",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "foods",
+                        "in": "formData",
+                        "description": "\u83dc\u54c1\u6570\u7ec4",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "deskId",
+                        "in": "formData",
+                        "description": "\u9910\u684c\u7f16\u53f7",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/lsx/public/index.php/v1/order/list": {
+            "get": {
+                "tags": [
+                    "\u8ba2\u5355\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u8ba2\u5355\u5217\u8868",
+                "description": "\u83b7\u53d6\u8ba2\u5355\u5217\u8868,\u9700\u8981\u4f20\u9012\u9875\u6570\uff0c\u6bcf\u9875\u6761\u6570\uff0c\u8d77\u59cb\u65f6\u95f4\u548c\u7ed3\u675f\u65f6\u95f4,\u90fd\u662f\u53ef\u9009\u53c2\u6570\u6709\u9ed8\u8ba4\u503c",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u9875\u6570\uff0c\u4e0d\u4f20\u5219\u9ed8\u8ba4\u4e3a1",
+                        "type": "string"
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "\u6bcf\u9875\u6761\u6570\uff0c\u4e0d\u4f20\u9ed8\u8ba4\u4e3a10",
+                        "type": "string"
+                    },
+                    {
+                        "name": "st",
+                        "in": "query",
+                        "description": "\u67e5\u8be2\u7684\u8d77\u59cb\u65f6\u95f4\uff0c\u4e0d\u4f20\u5219\u4e3a\u5f53\u524d\u65f6\u95f4-24\u5c0f\u65f6",
+                        "type": "string"
+                    },
+                    {
+                        "name": "et",
+                        "in": "query",
+                        "description": "\u67e5\u8be2\u7684\u7ed3\u675f\u65f6\u95f4\uff0c\u4e0d\u4f20\u5219\u4e3a\u5f53\u524d\u65f6\u95f4",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/lsx/public/index.php/v1/order/detail": {
+            "get": {
+                "tags": [
+                    "\u8ba2\u5355\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u8ba2\u5355\u8be6\u60c5",
+                "description": "\u83b7\u53d6\u8ba2\u5355\u8be6\u60c5",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "orderId",
+                        "in": "query",
+                        "description": "\u8ba2\u5355id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "getChartInfo": {
+            "get": {
+                "tags": [
+                    "\u8ba2\u5355\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u4e00\u5468\u8ba2\u5355\u6570\u91cf",
+                "description": "\u83b7\u53d6\u4e00\u5468\u8ba2\u5355\u6570\u91cf\uff0c\u5df2\u7ed3\u8d26\uff0c\u5f85\u4ed8\u6b3e\uff0c\u5df2\u53d6\u6d88",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "time",
+                        "in": "formData",
+                        "description": "\u65f6\u95f4YYYY-mm-dd\u683c\u5f0f",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/getMoneyInfo": {
+            "get": {
+                "tags": [
+                    "\u8ba2\u5355\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u6bcf\u661f\u671f\u7684\u6210\u4ea4\u989d\u60c5\u51b5\u63a5\u53e3",
+                "description": "\u83b7\u53d6\u6bcf\u661f\u671f\u7684\u6210\u4ea4\u989d\u60c5\u51b5\u63a5\u53e3",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "time",
+                        "in": "formData",
+                        "description": "\u65f6\u95f4YYYY-mm-dd\u683c\u5f0f",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/lsx/public/index.php/v1/user/add": {
             "post": {
                 "tags": [
                     "\u7528\u6237\u6a21\u5757"
@@ -275,7 +447,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/user/del": {
+        "/lsx/public/index.php/v1/user/del": {
             "post": {
                 "tags": [
                     "\u7528\u6237\u6a21\u5757"
@@ -301,7 +473,40 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/user/login": {
+        "/resetPassword": {
+            "post": {
+                "tags": [
+                    "\u7528\u6237\u6a21\u5757"
+                ],
+                "summary": "\u4fee\u6539\u5bc6\u7801",
+                "description": "\u4fee\u6539\u5bc6\u7801",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "newpassword",
+                        "in": "formData",
+                        "description": "\u65b0\u5bc6\u7801",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "\u7528\u6237token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/user/login": {
             "post": {
                 "tags": [
                     "\u7528\u6237\u6a21\u5757"
@@ -334,7 +539,7 @@
                 }
             }
         },
-        "/lsx/public/index.php/rest/v1/user": {
+        "/user?token={token}": {
             "get": {
                 "tags": [
                     "\u7528\u6237\u6a21\u5757"
@@ -347,10 +552,53 @@
                 "parameters": [
                     {
                         "name": "token",
-                        "in": "formData",
+                        "in": "query",
                         "description": "token",
                         "required": true,
                         "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/user/list": {
+            "get": {
+                "tags": [
+                    "\u7528\u6237\u6a21\u5757"
+                ],
+                "summary": "\u83b7\u53d6\u5458\u5de5\u5217\u8868",
+                "description": "\u83b7\u53d6\u5458\u5de5\u5217\u8868",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bf7\u6c42\u6210\u529f"
+                    }
+                }
+            }
+        },
+        "/img/upload": {
+            "get": {
+                "tags": [
+                    "\u7528\u6237\u6a21\u5757"
+                ],
+                "summary": "\u4e0a\u4f20\u7528\u6237\u5934\u50cf\u8ddf\u5728url\u540e\u9762\u7684\u63cf\u8ff0",
+                "description": "\u4e0a\u4f20\u7528\u6237\u5934\u50cf",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "img",
+                        "in": "formData",
+                        "description": "\u4e0a\u4f20\u7684\u6587\u4ef6",
+                        "required": true,
+                        "type": "file"
                     }
                 ],
                 "responses": {
